syntax = "proto3";

package pb;

option go_package = "./pb";

// 内容相似
message ContentSimilarReq {
  int32 ItemType = 1;
  int64 ItemId = 2;
  repeated string Tag = 3;
}

message ContentSimilarResp {
  repeated int64 ItemIds = 1;
}

// 用户偏好内容
message UserLikeContentReq {
  int64 UserId = 1;
  int32 PageNum = 2;
  int32 PageSize = 3;
}

message UserLikeContentResp {
  repeated int64 ItemIds = 1;
  int64 Total = 2;
}

// 记录内容标签
message ContentTagCreateReq {
  repeated string Name = 1;
  int32 ItemType = 2;
  int64 ItemId = 3;
}

message ContentTagCreateResp {

}

// 分析用户行为
message AnalyzeUserBehaviorReq {
  int64 UserId = 1;
  int64 ItemType = 2;
}

message AnalyzeUserBehaviorResp {
  repeated int64 ItemIds = 1;
}

// 更新用户标签
message UpdateUserTagReq {
  int64 UserId = 1;
  string TagJson = 2;
}

message UpdateUserTagResp {

}

service Data {
  rpc ContentSimilar(ContentSimilarReq) returns(ContentSimilarResp);
  rpc UserLikeContent(UserLikeContentReq) returns(UserLikeContentResp);
  rpc ContentTagCreate(ContentTagCreateReq) returns(ContentTagCreateResp);
  rpc AnalyzeUserBehavior(AnalyzeUserBehaviorReq) returns(AnalyzeUserBehaviorResp);
  rpc UpdateUserTag(UpdateUserTagReq) returns(UpdateUserTagResp);
}